projects/user-service/k8s/prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-example
spec:
  selector:
    matchLabels:
      name: service-example
  serviceName: service-example
  minReadySeconds: 20
  replicas: 1
  template:
    metadata:
      labels:
        name: service-example
    spec:
      containers:
        - name: service-example
          image: service-example:local
          ports:
            - containerPort: 8081
              protocol: TCP
      terminationGracePeriodSeconds: 30
